kubernetes/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lks-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lks-apps
  template:
    spec:
      containers:
      - name: app
        resources:
          requests:
            memory: "1024Mi"
            cpu: "512m"
          limits:
            memory: "1024Mi"
            cpu: "512m"
